# scikit-build-core-with-vcpkg

./: .clang-format  .gitignore  CMakeLists.txt  pyproject.toml  vcpkg.json
.github/workflows/: build-python-package.yml
cmake/: VcpkgHelper.cmake
python/native/: CMakeLists.txt  module.cpp
python/sk_vcpkg_example/: __init__.py  __init__.pyi
